WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271258
[WGSL] shader,validation,shader_io,locations:* is failing
https://bugs.webkit.org/show_bug.cgi?id=271258
Summary
[WGSL] shader,validation,shader_io,locations:* is failing
Tadeu Zagallo
Reported
2024-03-19 11:21:36 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-19 11:21:48 PDT
<
rdar://problem/125026498
>
Tadeu Zagallo
Comment 2
2024-03-19 11:25:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26135
EWS
Comment 3
2024-03-21 07:46:36 PDT
Committed
276460@main
(679ba4ca58bd): <
https://commits.webkit.org/276460@main
> Reviewed commits have been landed. Closing PR #26135 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug