[WGSL] shader,validation,shader_io,locations:* is failing https://bugs.webkit.org/show_bug.cgi?id=271258 rdar://125026498

Reviewed by Mike Wyrzykowski.

Add the validation for location attributes according to the spec[1].

[1]: https://www.w3.org/TR/WGSL/#user-defined-inputs-outputs

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/shader_io/locations-expected.txt:
* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::validateIO):
(WGSL::AttributeValidator::validateLocationIO):
(WGSL::AttributeValidator::validateStructIO):

Canonical link: https://commits.webkit.org/276460@main